@@ -4,22 +4,29 @@ import ru.otus.core.repository.DataTemplate;
 import ru.otus.core.repository.DataTemplateException;
 import ru.otus.core.repository.executor.DbExecutor;
 
+import java.lang.reflect.Field;
+import java.lang.reflect.InvocationTargetException;
 import java.sql.Connection;
+import java.sql.ResultSet;
+import java.sql.SQLException;
+import java.util.ArrayList;
 import java.util.Collections;
 import java.util.List;
 import java.util.Optional;
 
 /**
- * Сохратяет объект в базу, читает объект из базы
+ * Сохраняет объект в базу, читает объект из базы
  */
 public class DataTemplateJdbc<T> implements DataTemplate<T> {
 
     private final DbExecutor dbExecutor;
     private final EntitySQLMetaData entitySQLMetaData;
+    private final EntityClassMetaData<T> entityClassMetaData;
 
-    public DataTemplateJdbc(DbExecutor dbExecutor, EntitySQLMetaData entitySQLMetaData) {
+    public DataTemplateJdbc(DbExecutor dbExecutor, EntitySQLMetaData entitySQLMetaData, EntityClassMetaData<T> entityClassMetaData) {
         this.dbExecutor = dbExecutor;
         this.entitySQLMetaData = entitySQLMetaData;
+        this.entityClassMetaData = entityClassMetaData;
     }
 
     @Override
@@ -29,17 +36,13 @@ public class DataTemplateJdbc<T> implements DataTemplate<T> {
                 entitySQLMetaData.getSelectByIdSql(),
                 List.of(id),
                 rs -> {
-
-
-
-                   /* try {
+                    try {
                         if (rs.next()) {
-                            return new Client(rs.getLong("id"), rs.getString("name"));
+                            return rowMapper(rs);
                         }
-                        return null;
                     } catch (SQLException e) {
                         throw new DataTemplateException(e);
-                    }*/
+                    }
                     return null;
                 }
         );
@@ -47,64 +50,71 @@ public class DataTemplateJdbc<T> implements DataTemplate<T> {
 
     @Override
     public List<T> findAll(Connection connection) {
-        //T object;
-        //object.getClass().getDeclaredConstructor().newInstance();
-
-
-        return dbExecutor.executeSelect(
-                connection,
-                entitySQLMetaData.getSelectByIdSql(),
-                List.of(),
+        return dbExecutor.executeSelect(connection, entitySQLMetaData.getSelectAllSql(), Collections.emptyList(),
                 rs -> {
-
-                   /* try {
-                        if (rs.next()) {
-                            return new Client(rs.getLong("id"), rs.getString("name"));
+                    var objectList = new ArrayList<T>();
+                    try {
+                        while (rs.next()) {
+                            objectList.add(rowMapper(rs));
                         }
-                        return null;
+                        return objectList;
                     } catch (SQLException e) {
                         throw new DataTemplateException(e);
-                    }*/
-                    return null;
-                }
-        );
+                    }
+                }).orElseThrow(() -> new RuntimeException("Unexpected error"));
     }
 
     @Override
-    public long insert(Connection connection, T client) {
+    public long insert(Connection connection, T object) {
         try {
-            return dbExecutor.executeStatement(connection, entitySQLMetaData.getInsertSql(),
-                    Collections.singletonList(client));
+            List<Object> values = new ArrayList<>();
+            for (Field field : entityClassMetaData.getFieldsWithoutId()) {
+                field.setAccessible(true);
+                values.add(field.get(object));
+            }
+
+            return dbExecutor.executeStatement(connection,
+                    entitySQLMetaData.getInsertSql(),
+                    values
+            );
         } catch (Exception e) {
             throw new DataTemplateException(e);
         }
     }
 
     @Override
-    public void update(Connection connection, T client) {
-        throw new UnsupportedOperationException();
-    }
-    /*
-
-        @Override
-    public long insert(Connection connection, Client client) {
+    public void update(Connection connection, T object) {
         try {
-            return dbExecutor.executeStatement(connection, "insert into client(name) values (?)",
-                    Collections.singletonList(client.getName()));
+            List<Object> values = new ArrayList<>();
+            for (Field field : entityClassMetaData.getFieldsWithoutId()) {
+                field.setAccessible(true);
+                values.add(field.get(object));
+            }
+            Field fieldId = entityClassMetaData.getIdField();
+            fieldId.setAccessible(true);
+            values.add(fieldId.get(object));
+
+            dbExecutor.executeStatement(connection, entitySQLMetaData.getUpdateSql(), values);
         } catch (Exception e) {
             throw new DataTemplateException(e);
         }
     }
 
-    @Override
-    public void update(Connection connection, Client client) {
+
+    private T rowMapper(ResultSet rs) {
         try {
-            dbExecutor.executeStatement(connection, "update client set name = ? where id = ?",
-                    List.of(client.getName(), client.getId()));
-        } catch (Exception e) {
+            T object = entityClassMetaData.getConstructor().newInstance();
+            for (var field : entityClassMetaData.getAllFields()) {
+                var changeField = object.getClass().getDeclaredField(field.getName());
+                changeField.setAccessible(true);
+                changeField.set(object, rs.getObject(field.getName()));
+            }
+            return object;
+        } catch (SQLException e) {
             throw new DataTemplateException(e);
+        } catch (NoSuchMethodException | InstantiationException | IllegalAccessException | InvocationTargetException |
+                NoSuchFieldException e) {
+            throw new RuntimeException(e);
         }
     }
-
-     */
 }
